test/syc/good/gvariexpr.c
/*
 * Global variable initialized using a constant expression
 */

int a = 2 * 5;

int get_a(void)
{
	return a;
}
