test/syc/bad/incomlvar.c
/*
 * Loca variable has incomplete type
 */

void foo(void)
{
	int a[];
}
